feat: Complete SweatBot architecture upgrade with Vite migration
Major improvements:
- Migrate from Next.js to Vite for better DX and no SSR complexity
- Add PersonalSweatBotWithTools with intelligent tool-based system
- Implement tool registry: ExerciseLogger, Statistics, Goals, Progress, Suggestions
- Add voice recording integration with Hebrew support
- Update runtime adapter to connect to backend API (port 8003)
- Add comprehensive tool visualization components
- Enhanced MongoDB conversation persistence
- Updated project configuration and dependencies

🚀 This provides a clean, modern architecture with natural language understanding

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ postgres_data/
 test_*.py
 debug_*.py
 *_test.py
+
+# Embedded Git Repositories
+personal-ui/
+
+# Windows Path Issues
+"D:\MY PROJECTS"*
