--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ sounddevice>=0.4.6
 soundfile>=0.12.0
 SpeechRecognition>=3.10.0
 openai-whisper>=20230314
+pydub>=0.25.0
 
 # Hebrew TTS
 pygame>=2.5.0
@@ -20,6 +21,11 @@ requests>=2.31.0
 # AI and LLM
 groq>=0.4.0
 openai>=1.0.0
+phidata>=2.7.0
+
+# Database
+pymongo>=4.5.0
+motor>=3.3.0
 
 # Google Sheets integration
 gspread>=5.10.0
