--- a/personal-ui-vite/package.json
+++ b/personal-ui-vite/package.json
@@ -12,11 +12,22 @@
   "dependencies": {
     "@assistant-ui/react": "^0.10.43",
     "@google/generative-ai": "^0.21.0",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@tailwindcss/vite": "^4.1.12",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "groq-sdk": "^0.7.0",
-    "openai": "^5.15.0",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.545.0",
+    "marked": "^16.4.0",
+    "openai": "^5.23.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^9.0.1",
