--- a/render.yaml
+++ b/render.yaml
@@ -3,14 +3,12 @@ services:
     name: sweatbot-api
     env: python
     plan: free
-    buildCommand: "pip install -r requirements.txt"
-    startCommand: "uvicorn app.main:app --host 0.0.0.0 --port $PORT"
+    buildCommand: "cd backend && pip install -r requirements.txt"
+    startCommand: "cd backend && uvicorn app.main:app --host 0.0.0.0 --port $PORT"
     healthCheckPath: /health
     envVars:
       - key: PYTHON_VERSION
         value: 3.11
-      - key: PORT
-        value: 8000
 
 databases:
   - name: sweatbot-db
