--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
-# TypeScript Node.js deployment configuration - FORCE NODE JS READ (v5 - Major Change)
+# TypeScript Node.js deployment configuration - FINAL Node.js Config (v6)
 services:
   - type: web
-    name: sweat-bot
+    name: sweatbot-api
     env: node
     runtime: node
     plan: free
     rootDir: backend-nodejs
-    buildCommand: "npm ci --production=false && npm run build && echo 'Node.js build completed successfully'"
+    buildCommand: "npm ci --production=false && npm run build && echo 'Final Node.js build completed'"
     startCommand: "node dist/server-simple.js"
     healthCheckPath: /health
     envVars:
