force: Revert to original service name with Node.js config (v7)

--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 # TypeScript Node.js deployment configuration - FINAL Node.js Config (v6)
 services:
   - type: web
-    name: sweatbot-api
+    name: sweat-bot
     env: node
     runtime: node
     plan: free
