--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -50,6 +50,7 @@
     "redis": "^4.7.1",
     "socket.io": "^4.8.1",
     "winston": "^3.18.3",
+    "ws": "^8.18.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -63,6 +64,7 @@
     "@types/multer": "^1.4.13",
     "@types/node": "^20.19.22",
     "@types/pg": "^8.15.5",
+    "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.56.0",
