--- a/render.yaml
+++ b/render.yaml
@@ -1,12 +1,12 @@
-# TypeScript Node.js deployment configuration - FINAL Node.js Config (v6)
+# CRITICAL: FORCE NODE DEPLOYMENT - FIX PACKAGE-LOCK.JSON ISSUE (v8)
 services:
   - type: web
-    name: sweat-bot
+    name: sweatbot
     env: node
     runtime: node
     plan: free
     rootDir: backend-nodejs
-    buildCommand: "npm install && npm run build && echo 'Node.js build completed successfully'"
+    buildCommand: "npm install --production=false && npm run build && echo 'NODE.JS DEPLOYMENT SUCCESS - v8'"
     startCommand: "node dist/server-simple.js"
     healthCheckPath: /health
     envVars:
