CRITICAL FIX: Resolve Render deployment configuration issues
Root cause analysis identified:
- Render was looking at wrong directory (root instead of backend-nodejs)
- Root package.json and package-lock.json were confusing auto-detection
- Commands were not executing from correct working directory

Key fixes:
- Added explicit rootDir: backend-nodejs to render.yaml
- Removed confusing root package files
- Simplified build and start commands (no more cd needed)
- This ensures Render executes from within backend-nodejs directory

This should resolve the persistent build failures and npm ci errors.

--- a/render.yaml
+++ b/render.yaml
@@ -4,8 +4,9 @@ services:
     runtime: node
     plan: free
     env: node
-    buildCommand: "cd backend-nodejs && npm install && npm run build"
-    startCommand: "cd backend-nodejs && npm start"
+    rootDir: backend-nodejs
+    buildCommand: "npm install && npm run build"
+    startCommand: "npm start"
     healthCheckPath: /health
     autoDeploy: true
     envVars:
