--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -2,17 +2,17 @@
   "name": "sweatbot-api",
   "version": "2.0.0",
   "description": "SweatBot Hebrew Fitness AI Tracker - Node.js/TypeScript API",
-  "main": "dist/server-simple.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node dist/server-simple.js",
-    "dev": "nodemon src/server-simple.ts",
-    "build": "npx tsc --outDir dist --target ES2020 --module commonjs --esModuleInterop --skipLibCheck",
+    "start": "node dist/server.js",
+    "dev": "nodemon src/server.ts",
+    "dev:simple": "nodemon src/server-simple.ts",
+    "build": "./node_modules/.bin/tsc --outDir dist --target ES2020 --module commonjs --esModuleInterop --skipLibCheck",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "clean": "rm -rf dist",
-    "postinstall": "npm run build",
     "test:migration": "node test-migration.js"
   },
   "keywords": [
