Simplify TypeScript build command
- Use 'tsc' directly instead of complex path or npx commands
- npm scripts automatically include node_modules/.bin in PATH
- This should resolve the TypeScript compilation issue
- Keeping it simple is often the best approach

--- a/backend-nodejs/package.json
+++ b/backend-nodejs/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/server.js",
     "dev": "nodemon src/server.ts",
     "dev:simple": "nodemon src/server-simple.ts",
-    "build": "./node_modules/.bin/tsc --outDir dist --target ES2020 --module commonjs --esModuleInterop --skipLibCheck",
+    "build": "tsc --outDir dist --target ES2020 --module commonjs --esModuleInterop --skipLibCheck",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src/**/*.ts",
